Fixed main content spacing on ipad for services page

--- a/issa-theme.css
+++ b/issa-theme.css
@@ -482,8 +482,7 @@ h2 a:visited,
 	max-width: 100%;
 	background-color: white;
 	position: relative;
-	top: -11.7em;
-	top: -12.7rem;
+	top:0;
 }
 
 /* 04b - 1080px CSS Grid ----------- */
@@ -3411,6 +3410,14 @@ a.contactus:hover{color:#eee}
     	font-size:16px;
 	}
 
+	.innovators, .innovators .one-half {
+		min-width: 0;
+		background: none;
+		width: 96%;
+		padding: 0%;
+		margin: 2%;
+	}
+
 }
 
 /* Only iPad (not Iphone or desktop) */
@@ -3420,6 +3427,7 @@ a.contactus:hover{color:#eee}
 	.clipboard-first, .clipboard {
 		width: 40%;
 		margin: 16px 2.5% 10px 2.5%;
+		min-height:300px;
 	}
 
 }
@@ -3536,5 +3544,11 @@ a.contactus:hover{color:#eee}
 	.clipboard-first, .clipboard {
 		width: 90%;
 		margin: 16px 2.5% 10px 2.5%;
+	}
+
+	/* Removal of services tab for mobile */
+
+	#menu-item-508 {
+	    display: none;
 	}
 }
